Swagger api-doc examples set in comments
